removed Move objects, fixed resources in jar file, added killer moves and history heuristic, improved move ordering, optimized move generation into arrays